samples/_failures_safe/1761319394_2f70a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4724ae1.c: In function ‘main’:
./samples/SAFE/__tmp_e4724ae1.c:169:17: error: ‘st’ undeclared (first use in this function)
  169 |         fprintf(st
      |                 ^~
./samples/SAFE/__tmp_e4724ae1.c:169:17: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e4724ae1.c:169:19: error: expected ‘)’ at end of input
  169 |         fprintf(st
      |                ~  ^
      |                   )
./samples/SAFE/__tmp_e4724ae1.c:169:9: error: too few arguments to function ‘fprintf’
  169 |         fprintf(st
      |         ^~~~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_e4724ae1.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:1: note: declared here
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      | ^~~~~~~
./samples/SAFE/__tmp_e4724ae1.c:169:9: error: expected declaration or statement at end of input
  169 |         fprintf(st
      |         ^~~~~~~
./samples/SAFE/__tmp_e4724ae1.c:169:9: error: expected declaration or statement at end of input
